# fast_api_project

./: main.py  pyproject.toml
app/models/: users.py
app/schemas/: users.py
