[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Mashiro2465 <rlaalstjr2465@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.8"
uvicorn = "^0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
